    important to just take Espresso with you and compile it somewhere else.
(c) Added a new option for aggregation analysis tool: <min_contact> option defines a criteria 
    for minimum number of contacts for two molecules to be considered being in the same aggregate.
(c) Added new feature to aggregation analysis routine so that there is a 
    'minimum number of contacts'-criteria

Changes:
(i) mmm2d now uses a numerically stabilized treatment of the exponentials, which should allow
    for highly asymmetric simulation boxes such as 10x10x10000.
(g) the part 0 bond output now also has a code word, "bond". And the part x bond command now also
    accepts the "bond { { t1 p11 p12... } { t2 t21 t22... } }" format, i.e. the output format.
(f) aux.tcl is now auxiliary.tcl for a certain brain damaged operating system which doesn't like
    the other name.
(f) the format of config.h has changed. The documentation is separated from the flags as in debug.h
    to allow a better overview on the compilation status.
(f) changed FFTW_REAL and -IMAG for fftw3 to also work with systems where the complex data type
    is used. 
(f) utils.h alone includes debug.h and config.h and should be the one and only one of the three
    to be included in ALL files.
(e) Deactivating superfluous output of 'analyze necklace'-command.
(b) Speedup of the Bessel functions used for 'MMM1D'-calculations:
    - improved Chebychev series evaluation
    - 10^-14 precision adaptive routines
    - Combo K0/1 routine
(a) Updated the MMM1D testcase to contain maximal precision reference data.

Bugfixes:
(h) Fixed a very rare case bug where Espresso would either bail out with error 004 or loop
    endlessly for particles at processor boundaries due to rounding errors.
(f) Fixed some inportabilities such as spaces before #
(d) Fixed bug in aggregation analysis tool: 
    For calculating distances 'distance2vec' was used (which ignores periodicity), 
    but 'min_distance2' should have been used instead.