@@ -1,4 +1,8 @@
 {variable  {box_l 125.992104989 125.992104989 125.992104989} }
+{tclvariable 
+	{energy {-38.4001550344}}
+	{pressure {-6.40002583914e-06}}
+}
 {interactions 
 	{0 0 lennard-jones 1.0 1.0 1.12246 0.0 0.0 0.0 }
 	{coulomb 1.0 p3m 16.3929265333 32 4 0.142069354322 9.78886014586e-05}
